compiler/tests/en/errors/ret_float_all_int.salam
// EXPECT: E067
func test(): f64:
    ret 5
end

func main:
    println test()
end
